Add sandbox to build
Issue gh-610